--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -52,7 +52,8 @@ jobs:
         if: ${{ env.BASE_SETTINGS }}
         run: |
           uri="/api/v2/base-scan-settings/$(fcli sc-dast rest call /api/v2/base-scan-settings/scan-settings-summary-list?searchText="$BASE_SETTINGS" -o expr={items[0].id})"
-          
+          basescansettings=$(fcli sc-dast rest call $uri)
+
 
       # Run DAST Scan
       - name: Run DAST Scan
