--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -55,7 +55,7 @@ jobs:
           basescansettings=$(fcli sc-dast rest call $uri)
           body="{${basescansettings:4:-4},\"applicationVersionId\": \"$(fcli ssc appversion get $APPLICATION:$VERSION -o expr={id})\",\"name\": \"${APPLICATION}-${VERSION}-${SHA}\",\"scanType\": 1 }"
           cicdToken=$(fcli sc-dast rest call /api/v2/application-version-scan-settings -d "$body" -X POST  -o expr={cicdToken})
-          
+          echo "SCDAST_SETTINGS=$(echo $cicdToken)" >> $GITHUB_ENV
           
 
 
