--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -54,8 +54,10 @@ jobs:
           set -x
           uri="/api/v2/base-scan-settings/$(fcli sc-dast rest call /api/v2/base-scan-settings/scan-settings-summary-list?searchText="$BASE_SETTINGS" -o expr={items[0].id})"
           basescansettings=$(fcli sc-dast rest call $uri)
+          scansettings=${basescansettings:4:-4}
           applicationversionid=$(fcli ssc appversion get ${APPLICATION}:${VERSION} -o expr={id})
-          body="{${basescansettings:4:-4},\"applicationVersionId\": \"${applicationversionid}\",\"name\": \"${APPLICATION}-${VERSION}-${SHA}\",\"scanType\": 1 }"
+          scansettingsname=${APPLICATION}-${VERSION}-${SHA}
+          body="{$scansettings,\"applicationVersionId\": \"${applicationversionid}\",\"name\": \"$scansettingsname\",\"scanType\": 1 }"
           cicdToken=$(fcli sc-dast rest call /api/v2/application-version-scan-settings -d "$body" -X POST  -o expr={cicdToken})
           echo "SCDAST_SETTINGS=$(echo $cicdToken)" >> $GITHUB_ENV
           
