--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -54,7 +54,7 @@ jobs:
           set -x
           uri="/api/v2/base-scan-settings/$(fcli sc-dast rest call /api/v2/base-scan-settings/scan-settings-summary-list?searchText="$BASE_SETTINGS" -o expr={items[0].id})"
           basescansettings=$(fcli sc-dast rest call $uri)
-          scansettings=${ basescansettings:4:-4 }
+          scansettings=$(echo basescansettings | sed 's/^.\(.*\).$/\1/')
           applicationversionid=$(fcli ssc appversion get ${APPLICATION}:${VERSION} -o expr={id})
           scansettingsname=${APPLICATION}-${VERSION}-${SHA}
           body="{$scansettings,\"applicationVersionId\": \"${applicationversionid}\",\"name\": \"$scansettingsname\",\"scanType\": 1 }"
