--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -51,15 +51,25 @@ jobs:
       - name : Settings from Base Settings
         if: ${{ env.BASE_SETTINGS }}
         run: |
-          set -x
+          # Fetch Base Scan Settings
           uri="/api/v2/base-scan-settings/$(fcli sc-dast rest call /api/v2/base-scan-settings/scan-settings-summary-list?searchText="$BASE_SETTINGS" -o expr={items[0].id})"
           basescansettings=$(fcli sc-dast rest call $uri)
-          scansettings=$(echo $basescansettings | awk '{print substr($0, 4, length($0) - 6)}')
-          applicationversionid=$(fcli ssc appversion get ${APPLICATION}:${VERSION} -o expr={id})
-          scansettingsname=${APPLICATION}-${VERSION}-${SHA}
-          body="{$scansettings,\"applicationVersionId\": \"${applicationversionid}\",\"name\": \"$scansettingsname\",\"scanType\": 1 }"
-          cicdToken=$(fcli sc-dast rest call /api/v2/application-version-scan-settings -d "$body" -X POST  -o expr={cicdToken})
-          echo "SCDAST_SETTINGS=$(echo $cicdToken)" >> $GITHUB_ENV
+        
+          if [ -z "$basescansettings" ]
+          then
+                echo "No Base Scan Settings $BASE_SETTINGS found"
+                exit 1
+          else
+                scansettings=$(echo $basescansettings | awk '{print substr($0, 4, length($0) - 6)}')
+                applicationversionid=$(fcli ssc appversion get ${APPLICATION}:${VERSION} -o expr={id})
+                scansettingsname=${APPLICATION}-${VERSION}-${SHA}
+                body="{$scansettings,\"applicationVersionId\": \"${applicationversionid}\",\"name\": \"$scansettingsname\",\"scanType\": 1 }"
+                # Create Scan Settings
+                cicdToken=$(fcli sc-dast rest call /api/v2/application-version-scan-settings -d "$body" -X POST  -o expr={cicdToken})
+      
+                # Set SCDAST_SETTINGS env variable for whole job
+                echo "SCDAST_SETTINGS=$(echo $cicdToken)" >> $GITHUB_ENV
+          fi
           
 
 
