--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -23,7 +23,8 @@ jobs:
       SCDAST_SETTINGS: ""
       BASE_SETTINGS: "BodgeIt[Std][NoAuth]"
       # 
-      WAIT: true
+      WAIT: false
+      DELETE_SETTINGS: true
 
     steps:
       # # Check out source code
@@ -81,6 +82,12 @@ jobs:
       - name: Wait for DAST Scan Completion
         if: ${{ env.WAIT }}
         run: fcli sc-dast scan wait-for -u=Complete '{?dastscan:id}'  -i 30s
+
+      # Cleanup Scan Settings made from Base Settings
+      - name : Settings from Base Settings
+        if: ${{ env.BASE_SETTINGS }}
+        run: |
+          fcli sc-dast rest call /api/v2/application-version-scan-settings/$SCDAST_SETTINGS -X DELETE 
 
       # Clean up tokens, session variables, ...
       - name: Cleanup
