--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -89,7 +89,7 @@ jobs:
       - name : Settings from Base Settings
         if: ${{ env.BASE_SETTINGS }}
         run: |
-          fcli sc-dast rest call '/api/v2/application-version-scan-settings/$(fcli config var contents get scansettings -o expr={id})' -X DELETE 
+          fcli sc-dast rest call /api/v2/application-version-scan-settings/$(fcli config var contents get scansettings -o expr={id}) -X DELETE 
 
           echo "Scan Settings $SCDAST_SETTINGS deleted"
 
