--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -88,8 +88,9 @@ jobs:
       # Cleanup Scan Settings made from Base Settings
       - name : Settings from Base Settings
         if: ${{ env.BASE_SETTINGS }}
+        allow-failure: true
         run: |
-          fcli sc-dast rest call /api/v2/application-version-scan-settings/$(fcli config var contents get scansettings -o expr={id}) -X DELETE 
+          result=$(fcli sc-dast rest call /api/v2/application-version-scan-settings/$(fcli config var contents get scansettings -o expr={id}) -X DELETE)
 
           echo "Scan Settings $SCDAST_SETTINGS deleted"
 
