--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -53,16 +53,17 @@ jobs:
         if: ${{ env.BASE_SETTINGS }}
         run: |
           # Fetch Base Scan Settings
-          uri="/api/v2/base-scan-settings/$(fcli sc-dast rest call /api/v2/base-scan-settings/scan-settings-summary-list?searchText="$BASE_SETTINGS" -o expr={items[0].id})"
-          basescansettings=$(fcli sc-dast rest call $uri --store basescansettings)
+          basescansettingsid=$(fcli sc-dast rest call /api/v2/base-scan-settings/scan-settings-summary-list?searchText="$BASE_SETTINGS" -o expr={items[0].id})
         
-          if [ -z "$basescansettings" ]
+          if [ -z "$basescansettingsid" ]
           then
                 echo "No Base Scan Settings $BASE_SETTINGS found"
                 exit 1
           else
-                scansettings=$(echo $basescansettings | awk '{print substr($0, 4, length($0) - 6)}')
                 applicationversionid=$(fcli ssc appversion get ${APPLICATION}:${VERSION} -o expr={id})
+                uri="/api/v2/application-versions/${applicationversionid}/base-scan-settings/${basescansettingsid}"
+                basescansettings=$(fcli sc-dast rest call $uri --store basescansettings)
+                scansettings=$(echo $basescansettings | awk '{print substr($0, 4, length($0) - 6)}')
                 scansettingsname=${APPLICATION}-${VERSION}-${SHA}
                 body="{$scansettings,\"applicationVersionId\": \"${applicationversionid}\",\"name\": \"$scansettingsname\",\"scanType\": 1 }"
                 echo $body
