--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -23,8 +23,8 @@ jobs:
       BASE_SETTINGS: "BodgeIt[Std][Auth][SVC]"
       SCDAST_SETTINGS: ""
       # 
-      WAIT: false
-      DELETE_SETTINGS: true
+      WAIT: ${{ true }}
+      DELETE_SETTINGS: ${{ true }}
 
     steps:
       # # Check out source code
@@ -89,7 +89,7 @@ jobs:
 
       # Cleanup Scan Settings made from Base Settings
       - name : Delete Settings from Base Settings
-        if: ${{ env.BASE_SETTINGS }}
+        if: ${{ env.BASE_SETTINGS }} && ${{ env.DELETE_SETTINGS }}
         continue-on-error: true
         run: |
           res=$(fcli sc-dast rest call /api/v2/application-version-scan-settings/$(fcli config var contents get scansettings -o expr={id}) -X DELETE) || true
