--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -24,7 +24,7 @@ jobs:
       SCDAST_SETTINGS: ""
       # 
       WAIT: true
-      DELETE_SETTINGS: true
+      DELETE_SETTINGS: false
       
     steps:
       # # Check out source code
