--- a/.github/workflows/fortify-dynamic.yml
+++ b/.github/workflows/fortify-dynamic.yml
@@ -21,8 +21,8 @@ jobs:
       BASE_SETTINGS: "BodgeIt[Std][Auth][SVC]"
       SCDAST_SETTINGS: ""
       # 
-      WAIT: false
-      DELETE_SETTINGS: false
+      WAIT: true
+      DELETE_SETTINGS: true
       
     steps:
       # Login
