--- a/.github/workflows/fortify-security-gate.yml
+++ b/.github/workflows/fortify-security-gate.yml
@@ -1,4 +1,4 @@
-name: Fortify Security Gate
+honame: Fortify Security Gate
 on:
   workflow_dispatch:  
   push:
@@ -27,6 +27,7 @@ jobs:
       - name : Security Gate
         run: |
           applicationVersionId=$(fcli ssc appversion get ${APPLICATION}:${VERSION} -o expr={id})
+          echo "Checking Security Gate for Application Version ${APPLICATION}:${VERSION} ($applicationVersionId)"
           performanceIndicatorValue=$(fcli ssc rest call /api/v1/projectVersions/$applicationVersionId/performanceIndicatorHistories/$PERFORMANCEINDICATOR -o expr={data.value})
           
           if (( $((performanceIndicatorValue)) <=3 )); then
