--- a/.github/workflows/fortify-security-gate.yml
+++ b/.github/workflows/fortify-security-gate.yml
@@ -17,6 +17,7 @@ jobs:
       APPLICATION: "${{ github.event.repository.name }}"
       VERSION: "${{ github.ref_name }}"
       PERFORMANCEINDICATOR: FortifySecurityRating
+      PERFORMANCEINDICATOR_COMPARE: "<= 3"
       PERFORMANCEINDICATOR_WARN: true
       PERFORMANCEINDICATOR_BLOCK: true
       
@@ -34,8 +35,7 @@ jobs:
           performanceIndicatorValue=$(fcli ssc rest call /api/v1/projectVersions/$applicationVersionId/performanceIndicatorHistories/$PERFORMANCEINDICATOR -o expr={data.value})
           echo "$PERFORMANCEINDICATOR for ${APPLICATION}:${VERSION} is $performanceIndicatorValue"
           
-          if (( $(( $performanceIndicatorValue )) <=3 )); then
-            
+          if (( $(echo "$performanceIndicatorValue $PERFORMANCEINDICATOR_COMPARE" |bc -l) )); then
             echo "::warning file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
           fi
 
