--- a/.github/workflows/fortify-security-gate.yml
+++ b/.github/workflows/fortify-security-gate.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name : Security Gate
         run: |
-          apt update && apt install bc -y
+          apt -qq update && apt -qq install bc -y
         
           applicationVersionId=$(fcli ssc appversion get ${APPLICATION}:${VERSION} -o expr={id})
           echo "Checking Security Gate for Application Version ${APPLICATION}:${VERSION} ($applicationVersionId)"
@@ -37,8 +37,8 @@ jobs:
           performanceIndicatorValue=$(fcli ssc rest call /api/v1/projectVersions/$applicationVersionId/performanceIndicatorHistories/$PERFORMANCEINDICATOR -o expr={data.value})
           echo "$PERFORMANCEINDICATOR for ${APPLICATION}:${VERSION} is $performanceIndicatorValue"
           comparison="$performanceIndicatorValue $PERFORMANCEINDICATOR_COMPARE"
-          echo "Checking if comparison"
-          if (( $(echo  |bc -l) )); then
+          echo "Checking if $comparison"
+          if (( $(echo $comparison |bc -l) )); then
             echo "::warning file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
           fi
 
