--- a/.github/workflows/fortify-security-gate.yml
+++ b/.github/workflows/fortify-security-gate.yml
@@ -41,10 +41,10 @@ jobs:
           if (( $comparison | bc -l )); then
             fcli ssc appversion-vuln count --appversion $applicationVersionId
             if (( $PERFORMANCEINDICATOR_BLOCK )); then
-              echo "::error ::Fortify Security Gate Failed ($PERFORMANCEINDICATOR = $performanceIndicatorValue) $(fcli ssc appversion-vuln count --appversion 104 -o expr="/{cleanName}: {totalCount}")"
+              echo "::error ::Fortify Security Gate Failed ($PERFORMANCEINDICATOR = $performanceIndicatorValue) $(fcli ssc appversion-vuln count --appversion 104 -o expr=" {cleanName}: {totalCount}")"
               exit 1
             elif (( $PERFORMANCEINDICATOR_WARN )); then
-              echo "::warning ::Fortify Security Gate Failed ($PERFORMANCEINDICATOR = $performanceIndicatorValue) $(fcli ssc appversion-vuln count --appversion 104 -o expr="/{cleanName}: {totalCount}")"
+              echo "::warning ::Fortify Security Gate Failed ($PERFORMANCEINDICATOR = $performanceIndicatorValue) $(fcli ssc appversion-vuln count --appversion 104 -o expr=" {cleanName}: {totalCount}")"
             fi
           else 
               echo "Security Gate passed"
