--- a/.github/workflows/fortify-security-gate.yml
+++ b/.github/workflows/fortify-security-gate.yml
@@ -38,7 +38,7 @@ jobs:
           fcli ssc rest call /api/v1/projectVersions/$applicationVersionId/performanceIndicatorHistories?q=name:"$PERFORMANCEINDICATOR"  --store performanceIndicatorList
           performanceIndicatorCount=$(fcli config var contents list performanceIndicatorList -o expr={count})
           
-          if [[ "$performanceIndicatorCount" == 0 ]]; then
+          if [ "$performanceIndicatorCount" = 0 ]; then
             echo "::error ::Fortify Security Gate Failed: $PERFORMANCEINDICATOR not found for ${APPLICATION}:${VERSION}"  
             exit 1
           else
