--- a/.github/workflows/fortify-security-gate.yml
+++ b/.github/workflows/fortify-security-gate.yml
@@ -17,7 +17,7 @@ jobs:
       APPLICATION: "${{ github.event.repository.name }}"
       VERSION: "${{ github.ref_name }}"
       PERFORMANCEINDICATOR: Test
-      PERFORMANCEINDICATOR_COMPARE: "> 3"
+      PERFORMANCEINDICATOR_CONDITION: "> 3"
       PERFORMANCEINDICATOR_BLOCK: true
       PERFORMANCEINDICATOR_WARN: true
       
@@ -47,10 +47,10 @@ jobs:
           
           performanceIndicatorValue=$(fcli ssc rest call /api/v1/projectVersions/$applicationVersionId/performanceIndicatorHistories/$performanceIndicatorId -o expr={data.value})
           echo "$PERFORMANCEINDICATOR for ${APPLICATION}:${VERSION} is $performanceIndicatorValue"
-          comparison="$performanceIndicatorValue $PERFORMANCEINDICATOR_COMPARE"
+          comparison="$performanceIndicatorValue $PERFORMANCEINDICATOR_CONDITION"
           echo "Checking if $comparison"
           set -x
-          if [ $(echo $comparison | bc -l) ]; then
+          if [ $(echo $comparison | bc -l) = 0 ]; then
             fcli ssc appversion-vuln count --appversion $applicationVersionId
             if (( $PERFORMANCEINDICATOR_BLOCK )); then
               echo "::error ::Fortify Security Gate Failed ($PERFORMANCEINDICATOR = $performanceIndicatorValue) $(fcli ssc appversion-vuln count --appversion $applicationVersionId -o expr=" {cleanName}: {totalCount}") $FTFY_SSC_URL/html/ssc/version/$applicationVersionId/audit"    
