--- a/.github/workflows/sonatype-scan.yaml
+++ b/.github/workflows/sonatype-scan.yaml
@@ -12,7 +12,7 @@ jobs:
       IQ_PASSWORD: ${{ secrets.IQ_PASSWORD }}
       IQ_APP: "petclinic"
       IQ_STAGE: "build"
-      IQ_TARGET: "./target/"
+      IQ_TARGET: "lib"
       
     steps:
     - uses: actions/checkout@v1
@@ -21,9 +21,6 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-        
-    - name: Build with Maven
-      run: mvn package --file pom.xml
       
     - name: Nexus IQ Policy Evaluation
       uses: sonatype-nexus-community/iq-github-action@master
