--- a/.github/workflows/supercharge.yml
+++ b/.github/workflows/supercharge.yml
@@ -8,3 +8,15 @@ jobs:
     steps:
       - name: Adding markdown
         run: echo '### Hello world! 🚀' >> $GITHUB_STEP_SUMMARY
+      - name: Adding markdown
+        run: echo '### Hello again! 🚀' >> $GITHUB_STEP_SUMMARY
+
+  
+  Explore-GitHub-Actions-bis:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Adding markdown
+        run: echo '### Hello world! 🚀' >> $GITHUB_STEP_SUMMARY
+      - name: Adding markdown
+        run: echo '### Hello again! 🚀' >> $GITHUB_STEP_SUMMARY
