--- a/.github/workflows/sc-sast.yml
+++ b/.github/workflows/sc-sast.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Create Application Version
         uses: agendry-pub/gha-ssc-create-application-version@v1
         with:
-          ssc_url: ${{ vars.FTFY_SSC_BASE_URL}}
+          ssc_base_url: ${{ vars.FTFY_SSC_BASE_URL}}
           # ssc_ci_token: ${{ secrets.FTFY_CI_TOKEN_DEC }}
           ssc_app: ${{ env.APPLICATION }}
           ssc_version: ${{ env.VERSION }}
