--- a/.github/workflows/sc-sast.yml
+++ b/.github/workflows/sc-sast.yml
@@ -23,7 +23,6 @@ jobs:
       contents: read
     env:
       FTFY_SC_CONTROLLER_URL: ${{ vars.FTFY_SC_CONTROLLER_URL }}
-      FTFY_SSC_UPLOAD_TOKEN: ${{ secrets.FTFY_SSC_UPLOAD_TOKEN }}
       FTFY_SSC_BASE_URL: ${{ vars.FTFY_SSC_BASE_URL }}
       FTFY_SSC_CI_TOKEN_ENC: ${{ secrets.FTFY_SSC_CI_TOKEN_ENC }}
       FTFY_SC_CLIENT_AUTH_TOKEN: ${{ secrets.FTFY_SC_CLIENT_AUTH_TOKEN }}
@@ -45,7 +44,7 @@ jobs:
       ### Run Fortify SAST ###
       # Login
       - name: Login to SSC
-        run: fcli ssc session login --url $FTFY_SSC_BASE_URL -t $FTFY_CI_TOKEN_DEC
+        run: fcli ssc session login --url $FTFY_SSC_BASE_URL -t $FTFY_SSC_CI_TOKEN_ENC
       - name: Login to SC SAST
         run:  fcli sc-sast session login --ssc-url $FTFY_SSC_BASE_URL -t $FTFY_SSC_CI_TOKEN_ENC -c $FTFY_SC_CLIENT_AUTH_TOKEN
         
